--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -55,6 +55,7 @@
     margin-top: 10px;
     align-items: flex-start;
     justify-content: space-between;
+    gap:5px;
   }
 
   /* Make the the todo items are wrapped in its own line*/
